[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memorose-sdk"
version = "0.1.0"
authors = [
  { name="Memorose Team", email="team@memorose.com" },
]
description = "Python SDK for the Memorose Hybrid AI Memory Storage Engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/memorose/memorose-sdk"
"Bug Tracker" = "https://github.com/memorose/memorose-sdk/issues"
